WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159641
some paths in Array.prototype.splice don't account for the array not having certain indexed properties
https://bugs.webkit.org/show_bug.cgi?id=159641
Summary
some paths in Array.prototype.splice don't account for the array not having c...
Saam Barati
Reported
2016-07-11 12:59:00 PDT
...
Attachments
patch
(4.38 KB, patch)
2016-07-11 14:47 PDT
,
Saam Barati
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-07-11 12:59:33 PDT
<
rdar://problem/27171999
>
Saam Barati
Comment 2
2016-07-11 14:47:37 PDT
Created
attachment 283348
[details]
patch
Saam Barati
Comment 3
2016-07-11 15:09:47 PDT
landed in:
https://trac.webkit.org/changeset/203087
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug